Intermediate changes (clock, calendar and interactive F buttons)

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,5 +1,9 @@
-@import "variable";
-@import "mixins";
+@import "./service/variable.scss";
+@import "./service/mixins.scss";
+@import "./parts/display.scss";
+@import "./parts/keyboard.scss";
+@import "./parts/menu.scss";
+@import "./parts/papers.scss";
 
 * {
   padding: 0;
@@ -8,25 +12,6 @@
   color: $colorWhite;
   font-family: "Times New Roman", Times, serif;
   font-size: 9pt;
-}
-
-.hidden {
-  visibility: hidden;
-}
-
-#activeBtnEnter {
-  background-color: $colorGreen;
-  border-color: $colorGreen;
-}
-
-button:not([class~="onComputer"]):hover {
-  background-color: $colorGrey;
-  border-color: $colorGrey2;
-}
-
-button[class~="onComputer"]:hover {
-  background-color: $colorGreen;
-  border-color: $colorGreen;
 }
 
 .suspense > h1 {
@@ -54,1033 +39,4 @@ button[class~="onComputer"]:hover {
 .wrapper_game_computer {
   display: flex;
   grid-column: 1;
-}
-
-.computer__display {
-  box-shadow: 0 0 7px 2px $colorGrey2;
-  background-color: $colorBlack;
-  border: 2px solid $colorGreen;
-  border-radius: 30px;
-  margin: 10px 0px 0px;
-  padding: 10px 10px 10px;
-  width: 700px;
-  height: 300px;
-}
-
-#display_lock {
-  background-color: $colorWhite;
-}
-
-.display_background {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-size: 680px 276px;
-  border: 2px solid $colorGreen;
-  border-radius: 20px;
-  color: $colorBlack;
-  border-color: $colorGrey;
-  font-size: 16pt;
-  width: 680px;
-  height: 276px;
-
-  & > audio {
-    position: absolute;
-    top: 200px;
-  }
-
-  & > input {
-    border: 2px solid $colorGrey2;
-    border-radius: 7px;
-    color: $colorBlack;
-    margin-right: 5px;
-    font-size: 14pt;
-    width: 250px;
-    height: 30px;
-
-    &:hover {
-      box-shadow: 0 0 2px 2px $colorGrey2;
-    }
-
-    &:focus {
-      outline: none;
-    }
-  }
-
-  & > button {
-    border: 2px solid $colorGrey2;
-    background-color: rgb(203, 228, 215);
-    border-radius: 7px;
-    color: $colorBlack;
-    font-size: 10pt;
-    width: 80px;
-    height: 30px;
-
-    &:hover {
-      box-shadow: 0 0 2px 2px $colorGrey2;
-    }
-  }
-}
-
-.audio_list_modal {
-  position: absolute;
-  padding: 5px;
-  border: 2px solid $colorGrey2;
-  box-shadow: 0 0 10px 3px black;
-  border-radius: 7px;
-  background-color: rgb(93, 182, 130);
-  top: 20px;
-
-  .songActive {
-    background-color: rgb(199, 195, 190);
-    border-radius: 3px;
-  }
-
-  & > h1 {
-    text-align: center;
-    font-size: 12pt;
-    color: black;
-    margin-top: 5px;
-  }
-
-  & > ul {
-    margin-top: 10px;
-
-    & > li {
-      list-style-type: none;
-      margin: 5px;
-
-      & > a {
-        font-size: 10pt;
-        color: black;
-        text-decoration: none;
-      }
-    }
-
-    & > li:hover {
-      background-color: rgb(199, 195, 190);
-      border-radius: 3px;
-    }
-  }
-}
-
-.clear {
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
-}
-
-.displayImage_0 {
-  background-image: url(../assets/display_background/derevia_gory_les.jpg);
-}
-
-.displayImage_1 {
-  background-image: url(../assets/display_background/dom_derevia_sneg.jpg);
-}
-
-.displayImage_2 {
-  background-image: url(../assets/display_background/izgorod_pole_derevia.jpg);
-}
-
-.displayImage_3 {
-  background-image: url(../assets/display_background/more_kamni_tuman.jpg);
-}
-
-.display_lock {
-  background-image: url(../assets/lock.png);
-}
-
-.display_mouse {
-  background-image: url(../assets/crazy-mouse.gif);
-  position: absolute;
-  width: 120px;
-  height: 120px;
-  bottom: 2px;
-  left: 0px;
-}
-
-@keyframes rotateUp {
-  from {
-    transform: ratate(0);
-  }
-
-  to {
-    transform: rotate(-90deg);
-  }
-}
-
-@keyframes rotateLeft {
-  from {
-    transform: rotate(-90deg);
-  }
-
-  to {
-    transform: rotate(-180deg);
-  }
-}
-
-@keyframes rotateDown {
-  from {
-    transform: ratate(-180deg);
-  }
-
-  to {
-    transform: rotate(-270deg);
-  }
-}
-
-@keyframes rotateRight {
-  from {
-    transform: ratate(-270deg);
-  }
-
-  to {
-    transform: rotate(-360deg);
-  }
-}
-.moveRightMouse {
-  left: 555px;
-  transition: left 8s cubic-bezier(0, 0, 1, 1);
-}
-.rotateMouseUp {
-  left: 555px;
-  animation: rotateUp 4s infinite alternate;
-}
-
-.moveUpMouse {
-  transform: rotate(-90deg);
-  left: 555px;
-  bottom: 150px;
-  transition: bottom 4s cubic-bezier(0, 0, 1, 1);
-}
-
-.rotateMouseLeft {
-  transform: rotate(-90deg);
-  left: 555px;
-  bottom: 150px;
-  animation: rotateLeft 4s infinite alternate;
-}
-
-.moveLeftMouse {
-  transform: rotate(-180deg);
-  left: 0px;
-  bottom: 150px;
-  transition: left 8s cubic-bezier(0, 0, 1, 1);
-}
-
-.rotateMouseDown {
-  transform: rotate(-180deg);
-  left: 0px;
-  bottom: 150px;
-  animation: rotateDown 4s infinite alternate;
-}
-
-.moveDownMouse {
-  transform: rotate(-270deg);
-  left: 0px;
-  bottom: 0px;
-  transition: bottom 4s cubic-bezier(0, 0, 1, 1);
-}
-
-.rotateMouseRight {
-  transform: rotate(-270deg);
-  left: 0px;
-  bottom: 00px;
-  animation: rotateRight 4s infinite alternate;
-}
-
-.computer__keyboard {
-  display: flex;
-  flex-direction: column;
-  background-color: $colorBlack;
-  color: $colorWhite;
-  border: 2px solid $colorGreen;
-  box-shadow: $boxShadow;
-  border-radius: $bordRad;
-  margin-top: 0px;
-  width: 700px;
-  height: 300px;
-  cursor: pointer;
-}
-
-.keyboard__upPanel {
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 660px;
-  height: 20px;
-  margin: 15px auto;
-}
-
-.keyboard__upPanel__leftPanel {
-  display: flex;
-
-  .mouseBtn {
-    @include btnStdBg-cBrd;
-    border-radius: $bordRad;
-    width: 26px;
-    height: 24px;
-    margin-top: -3px;
-    padding-top: 2px;
-    cursor: pointer;
-  }
-
-  .soundBtn {
-    @include btnStdBg-cBrd;
-    margin-left: 25px;
-    border-radius: $bordRad 0px 0px $bordRad;
-    width: 50px;
-    cursor: pointer;
-  }
-
-  .homeBtn {
-    @include btnStdBg-cBrd;
-    margin-left: 2px;
-    width: 50px;
-    cursor: pointer;
-  }
-
-  .blockBtn {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    @include btnStdBg-cBrd;
-    margin-left: 2px;
-    border-radius: 0px $bordRad $bordRad 0px;
-    width: 50px;
-    cursor: pointer;
-
-    & > p {
-      font-size: 5.5pt;
-    }
-  }
-
-  #onLock {
-    background-color: $colorGreen;
-  }
-
-  .offBtn {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    @include btnStdBg-cBrd;
-    margin-left: 25px;
-    border-radius: $bordRad;
-    width: 50px;
-    cursor: pointer;
-
-    & > p {
-      font-size: 5.5pt;
-    }
-  }
-}
-
-#onComputer,
-#onLock,
-#onMusic,
-#onMouse {
-  background-color: $colorGreen;
-}
-
-.keyboard__upPanel__rightPanel {
-  display: flex;
-  margin-right: 24px;
-  margin-top: 37px;
-
-  .emblem {
-    display: flex;
-    align-self: flex-end;
-    @include btnStnBrd-rad;
-
-    & > p {
-      margin-left: 5px;
-      font-size: 18pt;
-    }
-  }
-}
-
-.upPanel_message {
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: black;
-  text-align: center;
-  left: 288px;
-  width: 250px;
-  height: 33px;
-}
-
-.upPanel_message_layout {
-  background-color: rgb(93, 182, 130);
-  border: 1px solid $colorGrey2;
-  border-radius: 5px;
-  color: black;
-  text-align: center;
-  width: 30px;
-}
-
-.upPanel_message_message {
-  background-color: rgb(93, 182, 130);
-  border: 1px solid $colorGrey2;
-  border-radius: 5px;
-  color: black;
-  text-align: center;
-  margin-left: 10px;
-  width: 145px;
-}
-
-.keyboard__downContainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 660px;
-  height: 210px;
-  margin: 15px auto;
-}
-
-.keyboard__downContainer__centralPanel {
-  display: flex;
-  flex-direction: column;
-  width: 516px;
-  height: 210px;
-  margin-left: -8px;
-}
-
-.centralPanel__blockEsc {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  width: 516px;
-  height: 25px;
-
-  & > button[class~="buttonPressed"] {
-    background-color: $colorGreen;
-    border-color: $colorGreen;
-  }
-}
-
-.blockEsc__btnClassF {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-content: space-around;
-  @include btnStdBg-cBrd;
-  @include btnStnBrd-rad;
-  @include btnActive;
-  padding-left: 6px;
-  width: 32px;
-  height: 23px;
-  margin-right: 2px;
-
-  & > p {
-    font-size: 5.5pt;
-    color: $colorBlue;
-  }
-
-  &:first-child {
-    padding-left: 5px;
-    padding-top: 2px;
-  }
-
-  &:nth-child(14),
-  &:nth-child(15) {
-    font-size: 9px;
-    padding: 1px;
-    padding-left: 3px;
-
-    p {
-      font-size: 7px;
-    }
-  }
-}
-
-.btn1F_F8 {
-  display: flex;
-}
-
-.centralPanel__blockNumbers {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-top: 2px;
-  width: 516px;
-  height: 35px;
-
-  & > button[class~="buttonPressed"] {
-    background-color: $colorGreen;
-    border-color: $colorGreen;
-  }
-}
-
-.blockNumbers__btnClassStd {
-  @include btnStd;
-  justify-content: space-around;
-
-  &:first-child {
-    width: 24px;
-
-    .column2 {
-      align-self: end;
-    }
-  }
-
-  &:last-child {
-    width: 43px;
-    font-size: 8px;
-    padding: 9px 0px 0px 2px;
-
-    p {
-      font-size: 6pt;
-    }
-  }
-}
-
-.centralPanel__containerEnter {
-  display: grid;
-  grid-template-columns: 1fr 33.5px;
-  grid-template-rows: 1fr 1fr;
-  gap: 2px;
-  margin-top: 2px;
-  width: 514px;
-  height: 72px;
-}
-
-.btnEnter {
-  display: grid;
-  grid-template-columns: 9.5px 24px;
-  grid-template-rows: 33px 1fr;
-  grid-column: 2;
-  grid-row: 1/3;
-
-  .btnEnter__LU {
-    background-color: $colorGrey;
-    border-color: grey;
-    border-width: 1px;
-    border-style: solid none solid solid;
-    border-radius: 3px 0 0 3px;
-    grid-column: 1;
-    grid-row: 1;
-  }
-
-  div[class~="buttonPressed"] {
-    background-color: $colorGreen;
-    border-color: $colorGreen;
-  }
-
-  .btnEnter__LD {
-    grid-column: 1;
-    grid-row: 2;
-    z-index: -5;
-  }
-
-  .btnEnter__RU {
-    background-color: $colorGrey;
-    border-color: grey;
-    border-width: 1px;
-    border-style: solid solid none none;
-    border-radius: 0 3px 0 0;
-    padding-top: 7px;
-    font-size: 9pt;
-    grid-column: 2;
-    grid-row: 1;
-
-    & > p {
-      margin-left: -5px;
-    }
-  }
-
-  .btnEnter__RD {
-    background-color: $colorGrey;
-    border-color: grey;
-    border-width: 1px;
-    border-style: none solid solid solid;
-    border-radius: 0 0 3px 3px;
-    grid-column: 2;
-    grid-row: 2;
-  }
-}
-
-.centralPanel__blockTab {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  grid-column: 1;
-  grid-row: 1;
-
-  & > button[class~="buttonPressed"] {
-    background-color: $colorGreen;
-    border-color: $colorGreen;
-  }
-}
-
-.blockTab__btnClassStd {
-  @include btnStd;
-  justify-content: center;
-  align-items: center;
-
-  &:nth-child(1) {
-    width: 43px;
-    padding-right: 10px;
-  }
-
-  &:nth-child(n + 2):nth-child(-n + 11) {
-    flex-direction: column;
-
-    .column1 {
-      margin-right: 15px;
-    }
-
-    .column2 {
-      margin-left: 15px;
-    }
-  }
-
-  &:nth-child(12),
-  &:nth-child(13) {
-    justify-content: space-evenly;
-
-    .column1 {
-      margin-bottom: 3px;
-    }
-
-    .column2 {
-      margin-top: 12px;
-    }
-  }
-
-  &:nth-child(13) {
-    width: 24px;
-  }
-}
-
-.centralPanel__blockCapsLock {
-  display: grid;
-  grid-template-columns: 62px repeat(11, 33.5px) 24px;
-  gap: 2px;
-  grid-column: 1;
-  grid-row: 2;
-
-  & > button[class~="buttonPressed"] {
-    background-color: $colorGreen;
-    border-color: $colorGreen;
-  }
-
-  .buttonOn {
-    background-color: $colorGreen;
-    border: 2px inset;
-  }
-}
-
-.blockCapsLock__btnClassStd {
-  @include btnStd;
-  justify-content: center;
-  align-items: center;
-
-  &:nth-child(1) {
-    display: flex;
-    justify-content: space-around;
-    padding: 0px 6px;
-    width: 62px;
-
-    .column1 {
-      font-size: 9pt;
-    }
-
-    .column2 {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border: 1px solid white;
-      width: 14px;
-      height: 14px;
-    }
-  }
-
-  &:nth-child(n + 2):nth-child(-n + 10) {
-    flex-direction: column;
-
-    .column1 {
-      margin-right: 13px;
-    }
-
-    .column2 {
-      margin-left: 13px;
-    }
-  }
-
-  &:nth-child(11),
-  &:nth-child(12),
-  &:nth-child(13) {
-    justify-content: space-evenly;
-
-    .column1 {
-      margin-bottom: 3px;
-    }
-
-    .column2 {
-      margin-top: 12px;
-    }
-  }
-
-  &:nth-child(13) {
-    width: 32.5px;
-    z-index: 1;
-  }
-}
-
-.centralPanel__blockShift {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-top: 2px;
-  width: 516px;
-  height: 35px;
-
-  & > button[class~="buttonPressed"] {
-    background-color: $colorGreen;
-    border-color: $colorGreen;
-  }
-
-  .buttonOn {
-    background-color: $colorGreen;
-    border: 2px inset;
-  }
-}
-
-.blockShift__btnClassStd {
-  @include btnStd;
-  justify-content: center;
-  align-items: center;
-
-  &:nth-child(n + 3):nth-child(-n + 9) {
-    flex-direction: column;
-
-    .column1 {
-      margin-right: 15px;
-    }
-
-    .column2 {
-      margin-left: 15px;
-    }
-  }
-
-  &:nth-child(2),
-  &:nth-child(10),
-  &:nth-child(11) {
-    justify-content: space-evenly;
-
-    .column2 {
-      margin-top: 14px;
-    }
-  }
-
-  &:nth-child(12) {
-    justify-content: space-evenly;
-  }
-
-  &:nth-child(13) {
-    flex-direction: column;
-
-    .column1 {
-      margin-bottom: 2px;
-
-      p {
-        padding-right: 1px;
-        font-size: 10px;
-        display: inline;
-      }
-    }
-  }
-}
-
-.centralPanel__blockSpace {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-top: 2px;
-  width: 516px;
-  height: 35px;
-
-  & > button[class~="buttonPressed"] {
-    background-color: $colorGreen;
-    border-color: $colorGreen;
-  }
-
-  .buttonOn {
-    background-color: $colorGreen;
-    border: 2px inset;
-  }
-}
-
-.blockSpace__btnClassStd {
-  @include btnStd;
-  justify-content: center;
-  align-items: center;
-
-  &:first-child {
-    border-radius: 3px 3px 3px 15px;
-  }
-
-  &:last-child {
-    border-radius: 3px 3px 15px 3px;
-  }
-
-  &:nth-child(2) .column1 {
-    background-color: $colorBlue;
-    padding: 2px;
-    @include btnStnBrd-rad;
-
-    p {
-      font-size: 7pt;
-      color: $colorBlack;
-    }
-  }
-
-  &:nth-child(5) {
-    width: 182px;
-  }
-
-  &:nth-child(7) .column1 {
-    margin-bottom: 2px;
-
-    p {
-      padding: 1px;
-      display: inline-block;
-      padding-right: 1px;
-      font-size: 12px;
-    }
-  }
-
-  &:nth-child(7) .column2 {
-    margin-top: -10px;
-  }
-
-  &:nth-child(8) .column1 p,
-  &:nth-child(10) .column1 p {
-    font-size: 7.5pt;
-    margin-top: 2px;
-  }
-
-  &:nth-child(9) {
-    flex-direction: column;
-
-    .column1 {
-      margin-bottom: 2px;
-
-      p {
-        padding-right: 1px;
-        font-size: 10px;
-        display: inline;
-      }
-    }
-  }
-}
-
-.keyboard__downContainer__mousePanel {
-  margin-right: -8px;
-  display: flex;
-  flex-direction: column;
-  width: 150px;
-  height: 220px;
-}
-
-.downContainer__mousePanel__board {
-  background-image: url(../assets/abstract.jpg);
-  background-size: 100%;
-  border: 2px grey;
-  border-style: solid solid none solid;
-  border-radius: $bordRad $bordRad 0px 0px;
-  height: 130px;
-}
-
-.downContainer__mousePanel__buttons {
-  display: flex;
-  flex-direction: row;
-  height: 40px;
-}
-
-.mousePanel__buttons__left {
-  width: 74px;
-  background-color: $colorGrey;
-  border: 2px $colorGrey2;
-  border-style: solid solid inset solid;
-  border-radius: 0px 0px 0px $bordRad;
-}
-
-.mousePanel__buttons__right {
-  background-color: $colorGrey;
-  border: 2px $colorGrey2;
-  border-style: solid inset inset solid;
-  border-radius: 0px 0px $bordRad 0px;
-  margin-left: 2px;
-  width: 74px;
-}
-
-.mousePanel__buttons__left,
-.mousePanel__buttons__right {
-  @include btnActive;
-}
-
-.downContainer__mousePanel__message {
-  background-color: rgb(93, 182, 130);
-  border: 1px solid $colorGrey2;
-  border-radius: 5px;
-  color: black;
-  text-align: center;
-  margin-top: 20px;
-  width: 145px;
-}
-
-.papers {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 800px;
-  height: 350px;
-  grid-column: 2;
-  grid-row: 1;
-}
-
-div[class^="note"] {
-  position: relative;
-  margin: 5px;
-  border-radius: 3px;
-  width: 170px;
-  height: 220px;
-  padding: 10px 10px;
-
-  & > p {
-    color: $colorGrey;
-  }
-
-  &[class$="1"] {
-    top: 20px;
-    left: 50px;
-    transform: rotate(15deg);
-    background-color: rgb(241, 241, 117);
-  }
-
-  &[class$="2"] {
-    top: 120px;
-    background-color: rgb(14, 232, 248);
-  }
-
-  &[class$="3"] {
-    left: -30px;
-    transform: rotate(-25deg);
-
-    background-color: rgb(233, 137, 12);
-  }
-
-  &[class$="4"] {
-    top: 120px;
-    left: -80px;
-    transform: rotate(35deg);
-    background-color: rgb(55, 231, 39);
-  }
-
-  .image_1 {
-    position: absolute;
-    width: 70px;
-    height: 70px;
-    top: 140px;
-    left: 45px;
-  }
-
-  .image_2 {
-    position: absolute;
-    width: 68px;
-    height: 63px;
-    top: 150px;
-    left: 50px;
-  }
-
-  .image_3 {
-    position: absolute;
-    width: 51px;
-    height: 63px;
-    top: 140px;
-    left: 50px;
-  }
-
-  .image_4 {
-    position: absolute;
-    width: 51px;
-    height: 63px;
-    top: 150px;
-    left: 50px;
-  }
-}
-
-.wrapper_menu {
-  grid-column: 1;
-  grid-row: 2;
-  position: relative;
-  border-radius: 5px;
-  box-shadow: 0px 0px 10px 3px black;
-  top: 330px;
-  left: 50px;
-  width: 310px;
-  height: 350px;
-  background-color: rgb(189, 103, 117);
-
-  & > p {
-    margin: 10px 120px;
-    font-size: 20pt;
-    color: black;
-  }
-
-  & > ul {
-    margin: 10px 10px 0px 25px;
-    & > li {
-      color: black;
-      font-size: 14pt;
-      text-align: justify;
-      padding: 5px;
-      list-style-type: square;
-      cursor: pointer;
-
-      &:hover {
-        box-shadow: 0 0 10px 3px black;
-        background-color: lightpink;
-      }
-    }
-  }
-}
-
-.menu_modalDisplayBg {
-  position: absolute;
-  top: 100px;
-  left: 270px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 2px solid $colorGrey2;
-  box-shadow: 0 0 10px 3px black;
-  border-radius: 7px;
-  width: 500px;
-  height: 100px;
-  background-color: rgb(93, 182, 130);
-
-  & > span {
-    position: absolute;
-    top: -3px;
-    right: 5px;
-    color: black;
-    font-size: 14pt;
-    cursor: pointer;
-  }
-}
-
-.miniImage {
-  width: 104px;
-  height: 78px;
-  margin: 7px;
-  border: 2px solid $colorGrey2;
-  border-radius: 7px;
-  background-size: auto 78px;
-  cursor: pointer;
 }
