--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,58 +1,3 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  color: #fff;
-  font-family: "Times New Roman", Times, serif;
-  font-size: 9pt;
-}
-
-.hidden {
-  visibility: hidden;
-}
-
-#activeBtnEnter {
-  background-color: rgb(30, 192, 130);
-  border-color: rgb(30, 192, 130);
-}
-
-button:not([class~=onComputer]):hover {
-  background-color: rgb(82, 82, 82);
-  border-color: rgb(146, 140, 140);
-}
-
-button[class~=onComputer]:hover {
-  background-color: rgb(30, 192, 130);
-  border-color: rgb(30, 192, 130);
-}
-
-.suspense > h1 {
-  color: black;
-}
-
-#error-page {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-}
-
-.wrapper {
-  background-image: url(../assets/picture.jpg);
-  background-size: 100% auto;
-  display: grid;
-  grid-template-columns: 1120px 800px;
-  grid-template-rows: 350px 730px;
-  width: 1920px;
-  height: 1080px;
-}
-
-.wrapper_game_computer {
-  display: flex;
-  grid-column: 1;
-}
-
 .computer__display {
   box-shadow: 0 0 7px 2px rgb(146, 140, 140);
   background-color: #000;
@@ -101,18 +46,6 @@ button[class~=onComputer]:hover {
 .display_background > input:focus {
   outline: none;
 }
-.display_background > button {
-  border: 2px solid rgb(146, 140, 140);
-  background-color: rgb(203, 228, 215);
-  border-radius: 7px;
-  color: #000;
-  font-size: 10pt;
-  width: 80px;
-  height: 30px;
-}
-.display_background > button:hover {
-  box-shadow: 0 0 2px 2px rgb(146, 140, 140);
-}
 
 .audio_list_modal {
   position: absolute;
@@ -150,10 +83,33 @@ button[class~=onComputer]:hover {
   border-radius: 3px;
 }
 
-.clear {
+#searchButton {
+  border: 2px solid rgb(146, 140, 140);
+  background-color: rgb(203, 228, 215);
+  border-radius: 3px;
+  color: #000;
+  font-size: 10pt;
+  width: 80px;
+  height: 30px;
+}
+#searchButton:hover {
+  box-shadow: 0 0 2px 2px rgb(146, 140, 140);
+}
+
+#clearButton {
+  border: 2px solid rgb(146, 140, 140);
+  background-color: rgb(203, 228, 215);
+  border-radius: 3px;
+  color: #000;
+  font-size: 10pt;
+  width: 80px;
+  height: 30px;
   position: absolute;
   bottom: 10px;
   right: 10px;
+}
+#clearButton:hover {
+  box-shadow: 0 0 2px 2px rgb(146, 140, 140);
 }
 
 .displayImage_0 {
@@ -304,6 +260,90 @@ button[class~=onComputer]:hover {
   bottom: 0px;
   -webkit-animation: rotateRight 4s infinite alternate;
           animation: rotateRight 4s infinite alternate;
+}
+
+.display_clock {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  border: 2px solid rgb(146, 140, 140);
+  top: 10px;
+  right: 10px;
+  background-color: rgb(223, 224, 224);
+  border-radius: 3px;
+  color: #000;
+  font-size: 16pt;
+  width: 110px;
+  height: 35px;
+}
+.display_clock:hover {
+  box-shadow: 0 0 2px 2px rgb(146, 140, 140);
+}
+
+.display_calendar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  border: 2px solid rgb(146, 140, 140);
+  border-radius: 3px;
+  top: 50px;
+  right: 10px;
+  background-color: rgb(223, 224, 224);
+  color: #000;
+  font-size: 16pt;
+  width: 110px;
+  height: 110px;
+}
+.display_calendar:hover {
+  box-shadow: 0 0 2px 2px rgb(146, 140, 140);
+}
+
+#calendar_header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  padding: 2px 3px;
+  border-width: 1px;
+  border-color: rgb(146, 140, 140);
+  border-style: none none solid none;
+  width: 110px;
+}
+#calendar_header > div {
+  font-size: 9pt;
+  color: black;
+}
+
+.calendar_table {
+  border: none;
+  background-color: rgb(223, 224, 224);
+}
+.calendar_table thead tr th {
+  border: none;
+  padding: 1px;
+  font-size: 6pt;
+  color: black;
+}
+
+.hidden {
+  visibility: hidden;
+}
+
+#activeBtnEnter {
+  background-color: rgb(30, 192, 130);
+  border-color: rgb(30, 192, 130);
+}
+
+button:not([class~=onComputer]):hover {
+  background-color: rgb(82, 82, 82);
+  border-color: rgb(146, 140, 140);
+}
+
+button[class~=onComputer]:hover {
+  background-color: rgb(30, 192, 130);
+  border-color: rgb(30, 192, 130);
 }
 
 .computer__keyboard {
@@ -947,6 +987,72 @@ button[class~=onComputer]:hover {
   width: 145px;
 }
 
+.wrapper_menu {
+  grid-column: 1;
+  grid-row: 2;
+  position: relative;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px 3px black;
+  top: 330px;
+  left: 50px;
+  width: 310px;
+  height: 350px;
+  background-color: rgb(189, 103, 117);
+}
+.wrapper_menu > p {
+  margin: 10px 120px;
+  font-size: 20pt;
+  color: black;
+}
+.wrapper_menu > ul {
+  margin: 10px 10px 0px 25px;
+}
+.wrapper_menu > ul > li {
+  color: black;
+  font-size: 14pt;
+  text-align: justify;
+  padding: 5px;
+  list-style-type: square;
+  cursor: pointer;
+}
+.wrapper_menu > ul > li:hover {
+  box-shadow: 0 0 10px 3px black;
+  background-color: lightpink;
+}
+
+.menu_modalDisplayBg {
+  position: absolute;
+  top: 100px;
+  left: 270px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid rgb(146, 140, 140);
+  box-shadow: 0 0 10px 3px black;
+  border-radius: 7px;
+  width: 500px;
+  height: 100px;
+  background-color: rgb(93, 182, 130);
+}
+.menu_modalDisplayBg > span {
+  position: absolute;
+  top: -3px;
+  right: 5px;
+  color: black;
+  font-size: 14pt;
+  cursor: pointer;
+}
+
+.miniImage {
+  width: 104px;
+  height: 78px;
+  margin: 7px;
+  border: 2px solid rgb(146, 140, 140);
+  border-radius: 7px;
+  background-size: auto 78px;
+  cursor: pointer;
+}
+
 .papers {
   display: flex;
   justify-content: center;
@@ -1018,68 +1124,38 @@ div[class^=note] .image_4 {
   left: 50px;
 }
 
-.wrapper_menu {
-  grid-column: 1;
-  grid-row: 2;
-  position: relative;
-  border-radius: 5px;
-  box-shadow: 0px 0px 10px 3px black;
-  top: 330px;
-  left: 50px;
-  width: 310px;
-  height: 350px;
-  background-color: rgb(189, 103, 117);
-}
-.wrapper_menu > p {
-  margin: 10px 120px;
-  font-size: 20pt;
-  color: black;
-}
-.wrapper_menu > ul {
-  margin: 10px 10px 0px 25px;
-}
-.wrapper_menu > ul > li {
-  color: black;
-  font-size: 14pt;
-  text-align: justify;
-  padding: 5px;
-  list-style-type: square;
-  cursor: pointer;
-}
-.wrapper_menu > ul > li:hover {
-  box-shadow: 0 0 10px 3px black;
-  background-color: lightpink;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  color: #fff;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 9pt;
 }
 
-.menu_modalDisplayBg {
-  position: absolute;
-  top: 100px;
-  left: 270px;
+.suspense > h1 {
+  color: black;
+}
+
+#error-page {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  border: 2px solid rgb(146, 140, 140);
-  box-shadow: 0 0 10px 3px black;
-  border-radius: 7px;
-  width: 500px;
-  height: 100px;
-  background-color: rgb(93, 182, 130);
-}
-.menu_modalDisplayBg > span {
-  position: absolute;
-  top: -3px;
-  right: 5px;
-  color: black;
-  font-size: 14pt;
-  cursor: pointer;
+  justify-content: center;
+  width: 100%;
 }
 
-.miniImage {
-  width: 104px;
-  height: 78px;
-  margin: 7px;
-  border: 2px solid rgb(146, 140, 140);
-  border-radius: 7px;
-  background-size: auto 78px;
-  cursor: pointer;
+.wrapper {
+  background-image: url(../assets/picture.jpg);
+  background-size: 100% auto;
+  display: grid;
+  grid-template-columns: 1120px 800px;
+  grid-template-rows: 350px 730px;
+  width: 1920px;
+  height: 1080px;
+}
+
+.wrapper_game_computer {
+  display: flex;
+  grid-column: 1;
 }/*# sourceMappingURL=style.css.map */
