--- a/src/css/style.css
+++ b/src/css/style.css
@@ -294,7 +294,7 @@
   color: #000;
   font-size: 16pt;
   width: 110px;
-  height: 110px;
+  height: 125px;
 }
 .display_calendar:hover {
   box-shadow: 0 0 2px 2px rgb(146, 140, 140);
@@ -325,6 +325,15 @@
   padding: 1px;
   font-size: 6pt;
   color: black;
+}
+.calendar_table tbody td {
+  border: none;
+  padding: 1px;
+  font-size: 6pt;
+  color: black;
+}
+.calendar_table tbody td[class=anotherMonth] {
+  font-weight: 100;
 }
 
 .hidden {
