--- a/src/css/game.css
+++ b/src/css/game.css
@@ -1,4 +1,22 @@
-.board-row:after {
+.game {
+  display: flex;
+  flex-direction: column;
+  width: 450px;
+}
+.game > h1 {
+  font-size: 15pt;
+  margin: 15px auto 10px;
+}
+.game > h2 {
+  font-size: 10pt;
+  margin: 0px auto 10px;
+}
+
+.game_board {
+  margin: 20px auto;
+}
+
+.board_row:after {
   clear: both;
   content: "";
   display: table;
@@ -28,46 +46,7 @@
   background-color: rgb(10, 162, 233);
 }
 
-.game {
-  display: flex;
-  flex-direction: column;
-  width: 450px;
-}
-.game > h1 {
-  font-size: 15pt;
-  margin: 15px auto 10px;
-}
-.game > h2 {
-  font-size: 10pt;
-  margin: 0px auto 10px;
-}
-
-.game-board {
-  margin: 20px auto;
-}
-
-.game-table-span {
-  margin-right: 10px;
-}
-
-.game-table-sort {
-  cursor: pointer;
-}
-
-.game-table-th {
-  width: 150px;
-}
-
-.game-table-button {
-  border: 1px solid rgb(146, 140, 140);
-  background-color: rgb(30, 192, 130);
-  color: white;
-  cursor: pointer;
-  border-radius: 5px;
-  padding: 5px 15px;
-}
-
-.game-info {
+.game_info {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -76,39 +55,63 @@
   font-weight: 800;
 }
 
-.game-info-status {
+.game_info_status {
   width: 180px;
   margin-left: 5px;
   text-align: center;
   font-size: 15pt;
 }
 
-.start-game {
+.start_game {
   width: 130px;
   margin-right: 10px;
   text-align: center;
 }
 
-.start-game-hidden {
+.start_game_hidden {
   opacity: 0;
 }
 
-table {
+.game_table {
   background-color: black;
   margin: 5px auto;
   border: 2px solid rgb(30, 192, 130);
 }
-
-th,
-td {
+.game_table > thead > tr > th {
   border: 1px solid rgb(30, 192, 130);
   text-align: center;
   font-weight: 800;
   padding: 3px;
 }
-
-td > a {
+.game_table > tbody > tr > td {
+  border: 1px solid rgb(30, 192, 130);
+  text-align: center;
+  font-weight: 800;
+  padding: 3px;
+}
+.game_table > tbody > tr > td > a {
   text-decoration: none;
+}
+
+.game_table_th {
+  width: 150px;
+}
+
+.game_table_span {
+  margin-right: 10px;
+}
+
+.game_table_sort {
+  cursor: pointer;
+}
+
+.game_table_button {
+  border: 1px solid rgb(146, 140, 140);
+  background-color: rgb(30, 192, 130);
+  color: white;
+  cursor: pointer;
+  border-radius: 5px;
+  padding: 5px 15px;
 }
 
 #sortUp > g,
