--- a/src/css/style.css
+++ b/src/css/style.css
@@ -285,7 +285,8 @@
   border: none;
   border-radius: 3px;
   color: black;
-  font-size: 13pt;
+  font-size: 11pt;
+  line-height: 1.4;
   text-align: right;
   width: 110px;
   height: 20px;
