Finished the calculator. Described the classes of the Game block according to the BEM methodology.

--- a/src/css/game.css
+++ b/src/css/game.css
@@ -3,26 +3,28 @@
   flex-direction: column;
   width: 450px;
 }
-.game > h1 {
+
+.game__header {
   font-size: 15pt;
   margin: 15px auto 10px;
 }
-.game > h2 {
+
+.game__subhead {
   font-size: 10pt;
   margin: 0px auto 10px;
 }
 
-.game_board {
+.game-board {
   margin: 20px auto;
 }
 
-.board_row:after {
+.board-row:after {
   clear: both;
   content: "";
   display: table;
 }
 
-.square {
+.board-row__square {
   background: #fff;
   border: 1px solid rgb(0, 0, 0);
   float: left;
@@ -38,15 +40,15 @@
   color: rgb(0, 0, 0);
 }
 
-.winner {
+.board-row__square_status_winner {
   background-color: #ffff00;
 }
 
-.ordinary {
+.board-row__square_status_ordinary {
   background-color: rgb(10, 162, 233);
 }
 
-.game_info {
+.game-info {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -55,57 +57,54 @@
   font-weight: 800;
 }
 
-.game_info_status {
+.game_info__status {
   width: 180px;
   margin-left: 5px;
   text-align: center;
   font-size: 15pt;
 }
 
-.start_game {
-  width: 130px;
-  margin-right: 10px;
-  text-align: center;
-}
-
-.start_game_hidden {
-  opacity: 0;
-}
-
-.game_table {
+.game-table {
   background-color: black;
   margin: 5px auto;
   border: 2px solid rgb(30, 192, 130);
 }
-.game_table > thead > tr > th {
-  border: 1px solid rgb(30, 192, 130);
-  text-align: center;
-  font-weight: 800;
-  padding: 3px;
-}
-.game_table > tbody > tr > td {
-  border: 1px solid rgb(30, 192, 130);
-  text-align: center;
-  font-weight: 800;
-  padding: 3px;
-}
-.game_table > tbody > tr > td > a {
-  text-decoration: none;
-}
 
-.game_table_th {
+.game-table-th {
   width: 150px;
+  border: 1px solid rgb(30, 192, 130);
+  text-align: center;
+  font-weight: 800;
+  padding: 3px;
 }
 
-.game_table_span {
+.game-table-th_style_short {
+  width: 70px;
+}
+
+.game-table-th__span {
   margin-right: 10px;
 }
 
-.game_table_sort {
+.game-table-th-sort {
+  margin-left: 5px;
+  width: 17px;
+  height: 17px;
   cursor: pointer;
 }
 
-.game_table_button {
+.game-table-td {
+  border: 1px solid rgb(30, 192, 130);
+  text-align: center;
+  font-weight: 800;
+  padding: 3px;
+}
+
+.game-table-td__link {
+  text-decoration: none;
+}
+
+.game-table-td__button {
   border: 1px solid rgb(146, 140, 140);
   background-color: rgb(30, 192, 130);
   color: white;
@@ -114,7 +113,12 @@
   padding: 5px 15px;
 }
 
-#sortUp > g,
-#sortDown > g {
-  fill: #0ee8f8;
+.game-table-td__button_mode_start {
+  width: 130px;
+  margin-right: 10px;
+  text-align: center;
+}
+
+.game-table-td__button_hidden {
+  opacity: 0;
 }/*# sourceMappingURL=game.css.map */
