--- a/src/css/parts/display.scss
+++ b/src/css/parts/display.scss
@@ -291,7 +291,9 @@
   }
 }
 
-.calculator_tablo {
+#calculator_tablo {
+  display: flex;
+  justify-content: space-between;
   font-size: 6pt;
   color: black;
   text-align: right;
@@ -299,7 +301,24 @@
   height: 10px;
 }
 
+#calculator_tablo_charMemory {
+  font-size: 6pt;
+  color: $colorGreen;
+  text-align: right;
+  width: 10px;
+  height: 10px;
+}
+
+#calculator_tablo_tablo {
+  font-size: 6pt;
+  color: black;
+  text-align: right;
+  width: 100px;
+  height: 10px;
+}
+
 .calculator_buttons {
+  position: relative;
   display: grid;
   grid-template-columns: repeat(4, 26px);
   grid-template-rows: repeat(6, 17px);
@@ -310,6 +329,15 @@
   button[class~="disabled_button"] {
     background-color: rgb(231, 228, 228);
     border: 1px solid rgb(206, 203, 203);
+  }
+
+  button[class~="onMemory"] {
+    background-color: $colorGreen;
+  }
+
+  button[class~="windowMemoryOpen"] {
+    background-color: $colorGreen;
+    border: 2px inset;
   }
 }
 
@@ -322,6 +350,21 @@
     background-color: rgb(231, 228, 228);
     border: 1px solid rgb(206, 203, 203);
   }
+}
+
+#calculator_windowMemory {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 11pt;
+  color: black;
+  position: absolute;
+  top: 19px;
+  left: 0;
+  background-color: white;
+  width: 110px;
+  height: 17px;
+  z-index: 5;
 }
 
 .display_clock {
