--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -4,6 +4,7 @@
 @import "./parts/keyboard.scss";
 @import "./parts/menu.scss";
 @import "./parts/papers.scss";
+@import "./parts/field.scss";
 
 * {
   padding: 0;
