--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -5,6 +5,7 @@
 @import "./parts/menu.scss";
 @import "./parts/papers.scss";
 @import "./parts/field.scss";
+@import "./page2/page2.scss";
 
 * {
   padding: 0;
