Added 2nd menu item: transition to a page with adaptive design

--- a/src/css/parts/menu.scss
+++ b/src/css/parts/menu.scss
@@ -31,6 +31,10 @@
         background-color: lightpink;
       }
     }
+    & > li a {
+      color: inherit;
+      font-size: inherit;
+    }
   }
 }
 
