--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1159,6 +1159,10 @@
   box-shadow: 0 0 10px 3px black;
   background-color: lightpink;
 }
+.wrapper_menu > ul > li a {
+  color: inherit;
+  font-size: inherit;
+}
 
 .menu_modalDisplayBg {
   position: absolute;
@@ -1287,11 +1291,6 @@ div[class^=note] .image_4 {
   left: 30px;
   width: 322px;
   height: 242px;
-}
-
-.adaptive-design {
-  color: black;
-  font-size: 20px;
 }
 
 * {
