--- a/src/css/style.css
+++ b/src/css/style.css
@@ -782,12 +782,13 @@
   border-style: solid solid none none;
   border-radius: 0 3px 0 0;
   padding-top: 7px;
-  font-size: 9pt;
   grid-column: 2;
   grid-row: 1;
 }
 .btnEnter .btnEnter__RU > p {
+  font-size: 8.5pt;
   margin-left: -5px;
+  margin-top: 3px;
 }
 .btnEnter .btnEnter__RD {
   background-color: rgb(82, 82, 82);
